[package]
name = "xenbakd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xapi_cli_client = { path = "../../libs/xapi_cli_client" }
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
figment = { version = "0.10.14", features = ["toml"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-cron-scheduler = "0.10.0"
async-trait = "0.1.77"
chrono = "0.4.33"
