[package]
name = "xenbakd"
version = "0.2.0"
edition = "2021"
description = "A backup daemon for Xen hypervisors"
license = "MIT"
keywords = [
  "xen",
  "backup",
  "hypervisor",
  "daemon",
  "rust",
  "tokio",
  "async",
  "xcp-ng",
]
authors = ["Simon Sölder <soelder@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.12"
figment = { version = "0.10.14", features = ["toml"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-cron-scheduler = "0.10.0"
async-trait = "0.1.77"
chrono = "0.4.33"
thiserror = "1.0.56"
lettre = { version = "0.11.4", features = [
  "tracing",
  "tokio1",
  "tokio1-rustls-tls",
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
], default-features = false }
reqwest = { version = "0.11.24", features = [
  "rustls-tls",
], default-features = false }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.3.0"
colored = "2.1.0"
serde_json = "1.0.113"
clap = { version = "4.5.0", features = ["derive"] }
async-compression = { version = "0.4.6", features = ["zstd", "tokio"] }
uuid = { version = "1.7.0", features = ["v4"] }
async-tempfile = { version = "0.5.0", features = ["uuid"] }
